# gl-mt7981

./: 7981.config  7986.config
gl-sdk4-mtk-wifi-v2/files/: mtk-wifi-configurator.lua  smp.sh  wireless.config
package/base-files/files/etc/: rc.local
package/connectivity/conninfra/: Makefile
package/connectivity/conninfra/src/: Makefile
package/datconf/: Makefile
package/datconf/src/: CMakeLists.txt
package/datconf/src/datconf/: CMakeLists.txt  datconf.c  libdatconf.c  libdatconf.h
package/datconf/src/datconf/lua/: CMakeLists.txt  datconf.c
package/datconf/src/kvcutil/: CMakeLists.txt  kvcedit.c  kvcutil-internal.h  libkvcutil.c
package/kernel/gpio-button-hotplug/src/: gpio-button-hotplug.c
package/kernel/linux/modules/: fs.mk  lib.mk
package/libs/uclibc++/patches/: 006-buildsys-shorten-abi-deb-file-names.patch
package/luci-app-mtk/luasrc/controller/: mtkwifi.lua
package/luci-app-mtk/luasrc/view/admin_mtk/: mtk_wifi_apcli.htm  mtk_wifi_dev_cfg.htm  mtk_wifi_vif_cfg.htm
package/luci-app-mtk/po/zh_Hans/: mtk.po
package/luci-app-mtk/root/usr/lib/lua/: mtkwifi.lua
package/luci-app-openclash/root/etc/openclash/core/: clash
package/luci-app-passwall/: Makefile
package/luci-app-turboacc/: Makefile
package/luci-app-turboacc/htdocs/luci-static/resources/view/: turboacc.js
package/luci-app-turboacc/root/etc/init.d/: turboacc
package/luci-app-turboacc/root/etc/uci-defaults/: turboacc
package/miniupnpd/files/: upnpd.config
package/mt_wifi/: Makefile
package/mt_wifi/patches/: 006-bw.patch
package/mt_wifi/src/mt_wifi/embedded/ap/: ap_cfg.c
package/mt_wifi/src/mt_wifi/embedded/common/: rtmp_init.c
package/mtkiappd/: Makefile
package/mtkiappd/files/: mtkiappd.sh
package/mtkiappd/src/: Makefile  rtmpiapp.c
package/network/services/dnsmasq/patches/: 300-remove-limit-hostname.patch  301-passthrough-dhcp.patch
package/network/services/odhcpd/patches/: 00-add-hotplug-for-relay.patch
package/network/utils/iwinfo/: Makefile
package/network/utils/iwinfo/patches/: 0001-fix-wext-h.patch  0100-support-mtk.patch
package/network/utils/iwinfo/src/: iwinfo_mtk.c
package/network/utils/wireless-tools/patches/: 100-increase-buffer-size.patch
package/system/fstools/patches/: 0001-support-partlable.patch
package/system/opkg/patches/: 001-support-db.patch  002-conffile-use-standard-output.patch
package/warp/: Makefile
package/warp/src/: warp.h  warp_bm.h  warp_bm_v2.c  warp_cfg.h  warp_hw.h  warp_main.c  warp_meminfo_list.h  warp_proc.c  warp_utility.h  warp_wifi.c  warp_wifi.h  wdma.c  wed.c  wed.h
package/warp/src/mcu/: warp_evt.c  warp_fwdl.c  warp_fwdl.h  warp_msg.c  warp_wo.c  warp_woctrl.c
package/warp/src/regs/coda/: wdma_hw.h  wed_hw.h
package/warp/src/regs/reg_v2/: warp_hw_v2.c  warp_mt6890.c  warp_mt6990.c  warp_mt7981.c  warp_mt7986.c
package/warp/src/tools/: bin2h
package/wifi-profile/: Makefile
package/wifi-profile/files/: glversion
package/wifi-profile/files/common/: kick.sh
package/wifi-profile/files/mt7981/: wifi.lua
